--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <header class="hero">
         <div class="container">
-            <h1>Treloo</h1>
+            <h1 class="logo">Treloo</h1>
             <nav class="main-nav">
-                    <a href="#review">Review</a>
-                    <a href="#tips">Tips</a>
-                    <a href="#alerts">Alerts</a>
-                    <a href="#blog">Blog</a>
+                    <a href="review">Review</a>
+                    <a href="tips">Tips</a>
+                    <a href="alerts">Alerts</a>
+                    <a href="blog">Blog</a>
                     <a href="#" class="active">Blog</a>
             </nav>
         </div>
